# personal_portfolio

./: .gitignore  README.md  docker-compose.coolify.yml  docker-compose.yml  package-lock.json  requirements.txt  setup.sh  vercel.json
.github/workflows/: ci-cd.yml
backend/: .dockerignore  .env.docker  .env.docker.example  .env.example  .env.production  Dockerfile  entrypoint.prod.sh  gunicorn.conf.py  pyproject.toml
backend/main_app/: admin.py  api_urls.py  api_views.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py  viewsmodels.py
backend/main_app/management/commands/: seed_projects.py  seed_site_content.py
backend/main_app/migrations/: 0001_initial.py  0002_blogpost_contactinquiry_service_and_more.py  0003_delete_education_delete_experience_and_more.py
backend/personal_portfolio/: settings.py  urls.py  wsgi.py
backend/templates/: index.html  projects.html  resume.html
backend/templates/main/: footer.html  nav.html
docs/deployment/: coolify.md
frontend/: .dockerignore  .env.example  Dockerfile  app.vue  nuxt.config.ts  package-lock.json  package.json
frontend/components/: CallToAction.vue  ProcessTimeline.vue  SiteFooter.vue  SiteHeader.vue
frontend/composables/: useApi.ts
frontend/layouts/: default.vue
frontend/pages/: contact.vue  index.vue  projects.vue  services.vue
main_app/: admin.py  forms.py  models.py  urls.py  views.py
personal_portfolio/: settings.py  setup.sh  urls.py  vercel.json  wsgi.py
staticfiles/: staticfiles.json
templates/: contact.html  index.html  projects.html  resume.html
(+33 files in other folders)
